# parseargs

./: .travis.yml  COPYING  Makefile  ParseArgs.cabal  ParseArgs.hs  README  README.md  parseargs-example.hs  parseargs.cabal  parseargs.hs  test-parseargs.hs  test-parseargs.sh  test.hs
System/Console/: ParseArgs.hs
tests/: t1.out  t2.out  t3.out
