Name: ParseArgs
Version: 0.1
License: LGPL
License-File: COPYING
Author: Bart Massey
Copyright: Copyright (C) 2007 Bart Massey
Maintainer: bart@cs.pdx.edu
Homepage: http://wiki.cs.pdx.edu/bartforge/parseargs
Category: System.Console
Build-Depends: base
Synopsis: Command-line argument parsing library for Haskell programs
Exposed-Modules: ParseArgs
Stability: alpha
